# fsmlib-cpp

./: .gitignore  README.md  build-for-linux.sh  build-for-osx.sh  build-for-xcode.sh  installation-notes.txt
doc/: Doxyfile
resources/: M1.fsm  M2.fsm  Mdr2.fsm  Mdr3.fsm  N1MIN.fsm  N2MIN.fsm  N3MIN.fsm  N4MIN.fsm  N5MIN.fsm  NFSM1.fsm  NMIN.fsm  NMIN_SUT.fsm  NN.fsm  R02.fsm  R03.fsm  R23.fsm  TC-DFSM-0001.fsm  TC-FSM-0005.fsm  TC-Fsm-Constructor3.fsm  TC-Fsm-Constructor4.fsm  TC-Fsm-Constructor5.fsm  TC-Fsm-CreateMutant1.fsm  TC-Fsm-CreateMutant2.fsm  TC-Fsm-CreateMutant3.fsm  TC-Fsm-CreateMutant4.fsm  TC-Fsm-DumpFsm.fsm  TC-Fsm-Intersect1.fsm  TC-Fsm-Intersect2.fsm  TC-Fsm-Intersect3.fsm  TC-FsmNode-calcDistinguishingTrace1.fsm  adaptive-iut-fail.fsm  adaptive-iut.fsm  adaptive-kaput-iut.fsm  adaptive-kaput-spec.fsm  adaptive-product-states.txt  adaptive-product.fsm  adaptive-test-in.txt  adaptive-test-state.txt  adaptive.dot  adaptive.fsm  (+66 more)
resources/TestSuites/: FSM002.fsm  FSM004.fsm  FSM005.fsm  FSM006.fsm  FSM007.fsm  FSM008.fsm  FSM011.fsm  FSM012.fsm  FSM013.fsm  FSM014.fsm  FSM015.fsm  FSM016.fsm  FSM018.fsm  FSM020.fsm  FSM021.fsm  FSM022.fsm  FSM025.fsm  FSM029.fsm  FSM030.fsm  FSM031.fsm  FSM032.fsm  FSM033.fsm  FSM034.fsm  FSM035.fsm  FSM036.fsm  FSM038.fsm  FSM040.fsm  FSM041.fsm  FSM042.fsm  FSM043.fsm  FSM044.fsm  FSM046.fsm  FSM048.fsm  FSM050.fsm  FSM051.fsm  FSM052.fsm
resources/TestSuites/DistinguishingTraces/: FSM02.fsm  FSM03.fsm  FSM04.fsm  FSM05.fsm  FSM11.fsm  FSM12.fsm  FSM13.fsm  FSM14.fsm  FSM15.fsm  FSM16.fsm  FSM17.fsm  FSM18.fsm  FSM19.fsm  FSM20.fsm  FSM21.fsm  FSM22.fsm  FSM23.fsm  FSM24.fsm  FSM25.fsm  FsmNode_calcDistinguishingTrace_pk.testsuite  Fsm_getCharacterisationSet.testsuite
resources/TestSuites/FSM-Transformations/: Dfsm_minimise.testsuite  FSM003.fsm  FSM004.fsm  FSM006.fsm  FSM009.fsm  FSM011.fsm  FSM015.fsm  FSM016.fsm  FSM018.fsm  FSM019.fsm  FSM020.fsm  FSM022.fsm  FSM029.fsm  FSM031.fsm  FSM032.fsm  FSM037.fsm  FSM038.fsm  FSM039.fsm  FSM041.fsm  FSM044.fsm  FSM045.fsm  Fsm_minimiseObservable.testsuite  Fsm_removeUnreachableNodes.testsuite  fsm_transf_ts.txt
resources/TestSuites/Intersection/: Fsm_intersect.testsuite  M10_2.fsm  M10_2_r.fsm  M13_1.fsm  M13_1_r.fsm  M13_2_r.fsm  M14_1.fsm  M14_1_r.fsm  M14_2.fsm  M14_2_r.fsm  M1_2.fsm  M25_1.fsm  M25_1_r.fsm  M25_2.fsm  M25_2_r.fsm  M26_1.fsm  M26_1_r.fsm  M26_2.fsm  M26_2_r.fsm  M29_1.fsm  M29_1_r.fsm  M29_2.fsm  M29_2_r.fsm  M2_1.fsm  M30_1.fsm  M30_1_r.fsm  M30_2.fsm  M30_2_r.fsm  M33_1.fsm  M33_1_r.fsm  M33_2.fsm  M33_2_r.fsm  M34_1.fsm  M34_1_r.fsm  M34_2.fsm  M34_2_r.fsm  M3_1.fsm  (+14 more)
resources/asc-tests/: adaptive-test-out.txt  adaptive-test-state-iut.txt  adaptive-test-state-spec.txt
resources/harness_adaptive_example/: example.fsm  example.state
resources/spyh-example/: m_ex.fsm  m_ex.in  m_ex.out  m_ex.state
resources/strong-reduction/: m_ex.dot  m_ex.testsuite
src/: CMakeLists.txt  FsmPrintVisitor.cpp  FsmPrintVisitor.h  FsmVisitor.h  cppcheck.cmake
src/checker/: CMakeLists.txt  fsm-checker.cpp
src/cloneable/: CMakeLists.txt  ICloneable.cpp  ICloneable.h
src/evaluation/: CMakeLists.txt  dmethodTest.cpp  equivalenceTest.cpp  hMethod-evaluation.cpp  methods-evaluation.cpp
src/example/: CMakeLists.txt  fsm-test-harness.c  gdclib.c  sut_wrapper.c
src/example_adaptive/: CMakeLists.txt  gdclib.h
src/example_nondeterministic/: CMakeLists.txt  example.cpp  example.h  sut_wrapper.cpp
src/fsm/: CMakeLists.txt  ConvergenceGraph.cpp  ConvergenceGraph.h  DFSMTable.cpp  DFSMTable.h  DFSMTableRow.cpp  DFSMTableRow.h  Dfsm.cpp  Dfsm.h  Fsm.cpp  Fsm.h  FsmEnumerator.cpp  FsmEnumerator.h  FsmLabel.cpp  FsmLabel.h  FsmNode.cpp  FsmNode.h  FsmOraVisitor.cpp  FsmOraVisitor.h  FsmPrintVisitor.cpp  FsmPrintVisitor.h  FsmSimVisitor.cpp  FsmSimVisitor.h  FsmTransition.cpp  FsmTransition.h  FsmVisitor.h  IOTrace.cpp  IOTrace.h  IOTraceContainer.cpp  IOTraceContainer.h  IOTraceHash.cpp  IOTraceHash.h  InputTrace.cpp  InputTrace.h  InputTraceSet.h  Int2IntMap.cpp  Int2IntMap.h  OFSMTable.cpp  OFSMTable.h  OFSMTableRow.cpp  (+21 more)
src/generator/: CMakeLists.txt  fsm-test-generator.cpp  generalized-h-method.hpp
src/graphs/: CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Network.cpp  Network.h  NetworkEdge.cpp  NetworkEdge.h  Node.cpp  Node.h  PartitionGraph.cpp  PartitionGraph.h  PartitionGraphEdge.cpp  PartitionGraphEdge.h  PartitionGraphNode.cpp  PartitionGraphNode.h
src/hareness/: CMakeLists.txt  fsm-test-hareness.c
src/harness/: CMakeLists.txt
src/harness_adaptive/: CMakeLists.txt  fsm-test-harness-adaptive.cpp  sut_wrapper_adaptive.cpp  sut_wrapper_adaptive.h  sut_wrapper_adaptive_example.cpp  sut_wrapper_adaptive_test.cpp  sut_wrapper_adaptive_test.h  vPrimeEnumerator.cpp  vPrimeEnumerator.h
src/harness_nondeterministic/: CMakeLists.txt  fsm_test_harness_nondeterministic.cpp
src/interface/: CMakeLists.txt  FsmPresentationLayer.cpp  FsmPresentationLayer.h
src/main/: CMakeLists.txt  Tests.cpp  Tests.h  main.cpp
src/method-checker/: CMakeLists.txt  adsMethodTest.cpp  dmethodTest.cpp  equivalenceTest.cpp  hieronsMethodTest.cpp  main.cpp
src/sets/: CMakeLists.txt  HittingSet.cpp  HittingSet.h  HsTreeNode.cpp  HsTreeNode.h
src/trees/: AdaptiveTreeNode.cpp  AdaptiveTreeNode.h  CMakeLists.txt  DistinguishingTree.cpp  DistinguishingTree.h  DistinguishingTreeEdge.cpp  DistinguishingTreeEdge.h  DistinguishingTreeNode.cpp  DistinguishingTreeNode.h  IOListContainer.cpp  IOListContainer.h  IOTreeContainer.cpp  IOTreeContainer.h  InputOutputTree.cpp  InputOutputTree.h  InputTree.cpp  InputTree.h  OutputTree.cpp  OutputTree.h  SplittingTree.cpp  SplittingTree.h  SplittingTreeEdge.cpp  SplittingTreeEdge.h  SplittingTreeNode.cpp  SplittingTreeNode.h  TestSuite.cpp  TestSuite.h  Tree.cpp  Tree.h  TreeEdge.cpp  TreeEdge.h  TreeNode.cpp  TreeNode.h
src/utils/: CMakeLists.txt  Logger.cpp  Logger.hpp  generic-equivalence-class-calculation.hpp
src/window/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenFileWindow.cpp  OpenFileWindow.h  gui.cpp
(+187 files in other folders)
